@@ -1,3 +1,7 @@
+2006-04-15  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_ReadXML.py: provide an event description if one does 
+	not exist.
+
 2006-04-15  Alex Roitman  <shura@gramps-project.org>
 	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Adapt to 
 	ChildRefType.
